[package]
name = "r_webservice"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.9"
futures-util = "^0.3.7"
futures-core = "^0.3.19"
derive_more = "^0.99.17"
serde = "^1.0.100"
serde_json = "^1.0.81"
rustls = "^0.20"
rustls-pemfile = "^1.0.0"
async-trait = "^0.1.53"
mime = "^0.3.16"
actix-rt = "^2.6"
actix-web = { version = "4.0.1", features = ["rustls"] }
actix-files = "0.6.0"
actix-session = { version = "0.6.2", features = ["redis-actor-session"] }
sqlx = { version = "0.5.9", features = [ "runtime-actix-rustls", "postgres"] }